# dead-editor

./: .gitignore  Application.cpp  Application.h  Constants.h  Editor.cpp  Editor.h  FileTree.h  FontManager.h  HelpContent.h  LanguageRegistry.cpp  LanguageRegistry.h  Layout.h  README.md  RenderUtils.h  Syntax.cpp  Syntax.h  TODO.md  TabBar.h  Terminal.cpp  TextureCache.cpp  TextureCache.h  Utils.cpp  Utils.h  Version.h.in  main.cpp  meson.build  test.txt
.github/: CODEOWNERS  FUNDING.yml  SECURITY.md  codeql-config.yml  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  labeler.yml  nightly.yml  release-drafter.yml  release.yml  stale.yml
packaging/linux/: DeadEditor.desktop
packaging/macos/: Info.plist.in
scripts/: create_app_bundle.sh  create_dmg.sh  generate_icns.sh  generate_linux_icons.sh  generate_version.sh
src/: ActionRegistry.h  AppActions.h  Application.cpp  Application.h  CommandBar.h  CommandManager.cpp  CommandManager.h  Constants.h  ContextMenu.h  Editor.cpp  Editor.h  EditorActions.h  EditorController.cpp  EditorController.h  EditorView.cpp  EditorView.h  FileTree.cpp  FileTree.h  FileTreeActions.h  FontManager.h  GlyphCache.h  HandleTypes.h  HelpContent.h  InputMapper.h  KeybindingsLoader.h  LRUCache.h  LanguageRegistry.cpp  LanguageRegistry.h  Layout.h  LineOffsetTree.h  MenuBar.h  PlatformInit.h  PlatformInit_default.cpp  PlatformInit_macos.mm  RenderUtils.h  SearchOverlay.h  Syntax.cpp  Syntax.h  TabBar.h  Terminal.cpp  (+10 more)
subprojects/: libvterm.wrap  tree-sitter-bash.wrap  tree-sitter-c.wrap  tree-sitter-cpp.wrap  tree-sitter-css.wrap  tree-sitter-diff.wrap  tree-sitter-html.wrap  tree-sitter-ini.wrap  tree-sitter-javascript.wrap  tree-sitter-json.wrap  tree-sitter-lua.wrap  tree-sitter-markdown.wrap  tree-sitter-meson.wrap  tree-sitter-php.wrap  tree-sitter-python.wrap  tree-sitter-rust.wrap  tree-sitter-toml.wrap  tree-sitter-yaml.wrap  tree-sitter-zig.wrap
subprojects/packagefiles/libvterm/: meson.build
subprojects/packagefiles/tree-sitter-bash/: meson.build
subprojects/packagefiles/tree-sitter-c/: meson.build
subprojects/packagefiles/tree-sitter-cpp/: meson.build
subprojects/packagefiles/tree-sitter-css/: meson.build
subprojects/packagefiles/tree-sitter-diff/: meson.build
subprojects/packagefiles/tree-sitter-html/: meson.build
subprojects/packagefiles/tree-sitter-ini/: meson.build
subprojects/packagefiles/tree-sitter-javascript/: meson.build
subprojects/packagefiles/tree-sitter-json/: meson.build
subprojects/packagefiles/tree-sitter-lua/: meson.build
subprojects/packagefiles/tree-sitter-markdown/: meson.build
subprojects/packagefiles/tree-sitter-meson/: meson.build
subprojects/packagefiles/tree-sitter-php/: meson.build
subprojects/packagefiles/tree-sitter-python/: meson.build
subprojects/packagefiles/tree-sitter-rust/: meson.build
subprojects/packagefiles/tree-sitter-toml/: meson.build
subprojects/packagefiles/tree-sitter-yaml/: meson.build
subprojects/packagefiles/tree-sitter-zig/: meson.build
